--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
-    "production": "npm run build && node ./build/src/server.js",
-    "dev": "nodemon --exec babel-node ./src/server.js"
+    "production": "npm run build && cross-env BUILD_MODE=production node ./build/src/server.js",
+    "dev": "cross-env BUILD_MODE=dev nodemon --exec babel-node ./src/server.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.7",
@@ -30,6 +30,7 @@
     "@babel/plugin-transform-runtime": "^7.26.8",
     "@babel/preset-env": "^7.26.8",
     "babel-plugin-module-resolver": "^5.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.20.1",
     "nodemon": "^3.1.9"
   }
