--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.7",
+    "@getbrevo/brevo": "^2.2.0",
     "async-exit-hook": "^2.0.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.13.0",
     "uuid": "^11.1.0"
