--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@getbrevo/brevo": "^2.2.0",
     "async-exit-hook": "^2.0.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -28,6 +29,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.13.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
